test-package-compiler/tests/snapshots/compiler_tests__actor_spawn_with_args_parser.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
AST:
Module {
    classes: [],
    method_definitions: [],
    protocols: [],
    type_aliases: [],
    native_declarations: [],
    expressions: [
        ExpressionStatement {
            comments: CommentAttachment {
                leading: [
                    Comment {
                        content: "Copyright 2026 James Casey",
                        span: Span {
                            start: 367,
                            end: 372,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "SPDX-License-Identifier: Apache-2.0",
                        span: Span {
                            start: 367,
                            end: 372,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "Test actor spawn with initialization arguments",
                        span: Span {
                            start: 367,
                            end: 372,
                        },
                        kind: Line,
                        preceding_blank_line: true,
                    },
                    Comment {
                        content: "Counter spawnWith: passes initialization arguments to init/1",
                        span: Span {
                            start: 367,
                            end: 372,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "which merges them with default field values.",
                        span: Span {
                            start: 367,
                            end: 372,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "",
                        span: Span {
                            start: 367,
                            end: 372,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "Once map literals are supported, use:",
                        span: Span {
                            start: 367,
                            end: 372,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "  counter := Counter spawnWith: #{value => 10}",
                        span: Span {
                            start: 367,
                            end: 372,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "",
                        span: Span {
                            start: 367,
                            end: 372,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "For now, test with a simple value:",
                        span: Span {
                            start: 367,
                            end: 372,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                ],
                trailing: None,
                leading_blank_line: false,
                blank_line_after_comments: false,
            },
            expression: Assignment {
                target: Identifier(
                    Identifier {
                        name: "value",
                        span: Span {
                            start: 367,
                            end: 372,
                        },
                    },
                ),
                value: Literal(
                    Integer(
                        0,
                    ),
                    Span {
                        start: 376,
                        end: 377,
                    },
                ),
                type_annotation: None,
                span: Span {
                    start: 367,
                    end: 377,
                },
            },
            preceding_blank_line: false,
        },
        ExpressionStatement {
            comments: CommentAttachment {
                leading: [],
                trailing: None,
                leading_blank_line: false,
                blank_line_after_comments: false,
            },
            expression: Assignment {
                target: Identifier(
                    Identifier {
                        name: "increment",
                        span: Span {
                            start: 378,
                            end: 387,
                        },
                    },
                ),
                value: Block(
                    Block {
                        parameters: [],
                        body: [
                            ExpressionStatement {
                                comments: CommentAttachment {
                                    leading: [],
                                    trailing: None,
                                    leading_blank_line: false,
                                    blank_line_after_comments: false,
                                },
                                expression: Assignment {
                                    target: FieldAccess {
                                        receiver: Identifier(
                                            Identifier {
                                                name: "self",
                                                span: Span {
                                                    start: 392,
                                                    end: 396,
                                                },
                                            },
                                        ),
                                        field: Identifier {
                                            name: "value",
                                            span: Span {
                                                start: 397,
                                                end: 402,
                                            },
                                        },
                                        span: Span {
                                            start: 392,
                                            end: 402,
                                        },
                                    },
                                    value: MessageSend {
                                        receiver: FieldAccess {
                                            receiver: Identifier(
                                                Identifier {
                                                    name: "self",
                                                    span: Span {
                                                        start: 406,
                                                        end: 410,
                                                    },
                                                },
                                            ),
                                            field: Identifier {
                                                name: "value",
                                                span: Span {
                                                    start: 411,
                                                    end: 416,
                                                },
                                            },
                                            span: Span {
                                                start: 406,
                                                end: 416,
                                            },
                                        },
                                        selector: Binary(
                                            "+",
                                        ),
                                        arguments: [
                                            Literal(
                                                Integer(
                                                    1,
                                                ),
                                                Span {
                                                    start: 419,
                                                    end: 420,
                                                },
                                            ),
                                        ],
                                        is_cast: false,
                                        span: Span {
                                            start: 406,
                                            end: 420,
                                        },
                                    },
                                    type_annotation: None,
                                    span: Span {
                                        start: 392,
                                        end: 420,
                                    },
                                },
                                preceding_blank_line: false,
                            },
                        ],
                        span: Span {
                            start: 391,
                            end: 421,
                        },
                    },
                ),
                type_annotation: None,
                span: Span {
                    start: 378,
                    end: 421,
                },
            },
            preceding_blank_line: false,
        },
        ExpressionStatement {
            comments: CommentAttachment {
                leading: [
                    Comment {
                        content: "Spawn with default values (value = 0)",
                        span: Span {
                            start: 464,
                            end: 472,
                        },
                        kind: Line,
                        preceding_blank_line: true,
                    },
                ],
                trailing: Some(
                    Comment {
                        content: "TODO: When map literal syntax #{key => value} is implemented:",
                        span: Span {
                            start: 484,
                            end: 489,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                ),
                leading_blank_line: true,
                blank_line_after_comments: false,
            },
            expression: Assignment {
                target: Identifier(
                    Identifier {
                        name: "counter1",
                        span: Span {
                            start: 464,
                            end: 472,
                        },
                    },
                ),
                value: MessageSend {
                    receiver: ClassReference {
                        name: Identifier {
                            name: "Counter",
                            span: Span {
                                start: 476,
                                end: 483,
                            },
                        },
                        package: None,
                        span: Span {
                            start: 476,
                            end: 483,
                        },
                    },
                    selector: Unary(
                        "spawn",
                    ),
                    arguments: [],
                    is_cast: false,
                    span: Span {
                        start: 476,
                        end: 489,
                    },
                },
                type_annotation: None,
                span: Span {
                    start: 464,
                    end: 489,
                },
            },
            preceding_blank_line: true,
        },
    ],
    span: Span {
        start: 367,
        end: 489,
    },
    file_leading_comments: [],
    file_trailing_comments: [
        Comment {
            content: "counter2 := Counter spawnWith: #{value => 10}",
            span: Span {
                start: 603,
                end: 603,
            },
            kind: Line,
            preceding_blank_line: false,
        },
    ],
}
