test-package-compiler/tests/snapshots/compiler_tests__actor_state_mutation_semantic.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
Semantic errors (5):
  - self can only be used inside a method body
  - self can only be used inside a method body
  - self can only be used inside a method body
  - self can only be used inside a method body
  - cannot assign to field 'value' inside a stored closure

= help: field assignments require immediate execution context
= help: use control flow directly: `items do: [:item | self.value := value]`
